syntax = "proto3";

//package proto;

option java_package = "org.superbiz.game.proto";
option java_outer_classname = "Msg";

message Message {
    PlayerMoved playerMoved = 1;
    WorldInfo worldInfo = 2;
    Resize resize = 3;
    DotsUpdate dotsUpdate = 4;
    EatenFood eatenFood = 5;
    SnakesUpdate snakesUpdate = 6;
    ClientDisconnect clientDisconnect = 7;
}

message WorldInfo {
    int32 radius = 1;
}

message Dot {
    float x = 1;
    float y = 2;
    int32 color = 3;
    int32 size = 4;
}

message DotsUpdate {
    repeated Dot dots = 1;
}

message SnakesUpdate {
    repeated SnakeInfo snakes = 1;
}

message PlayerMoved {
    float x = 1;
    float y = 2;
    float rotation = 3;
    float speed = 4;
    string skin = 5;
    repeated Part parts = 6;
    int64 initiated = 7;
}

message Part {
    float x = 1;
    float y = 2;
    float rotation = 3;
}

message TimeInfo {
    int64 initiated = 1;
    int64 processing = 2;
}

message EatenFood {
    TimeInfo timeInfo = 1;
    repeated Dot dots = 2;
}

message SnakeInfo {
    string id = 1;
    repeated Part path = 2;
    string skin = 3;
    float rotation = 4;
    float speed = 5;
}

message Resize {
    int32 width = 1;
    int32 height = 2;
}

message ClientDisconnect {
    string id = 1;
}